[tool.poetry]
name = "epaper-weather-display"
version = "0.1.0"
description = "Display current weather on a inky display"
authors = ["Toby56 <Toby56@pm.me>","Wouter van Bommel <wouter@woutervb.net>"]
license = "GPL"
readme = "README.md"
packages = [{include = "epaper_weather_display"}]

[tool.poetry.dependencies]
python = ">3.8"
inky = "^1.5.0"
Flask = "^2.3.2"
python-dateutil = "^2.8.2"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
